--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "main": "index.js",
   "scripts": {
     "dev": "nodemon server.js",
-    "start": "node ../vari/server/server.js",
+    "start": "node server.js",
     "build": "npm install",
     "test": "echo \"Error: no test specified\" && exit 1",
     "heroku-postbuild": "NPM_CONFIG_PRODUCTION=false && npm install && npm install --prefix ../vari/client && npm run build --prefix client"
